objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Project_Complete__c</fullName>
        <formula>Sum_of_Milestone_Complete__c  /  Total_No_of_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project % Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>IF( Project_Complete__c = 0, &quot;Not Started&quot;, IF(Project_Complete__c = 100, &quot;Complete&quot;, &quot;In Progress&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Milestone_Complete__c</fullName>
        <label>Sum of Milestone % Complete</label>
        <summarizedField>Milestone__c.Milestone_Complete__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Milestones__c</fullName>
        <label>Total No of Milestones</label>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>